--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "confessin",
-  "version": "0.0.0",
+  "name": "@sooluh/confess",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -31,7 +31,5 @@
     "pretty-quick": "^3.1.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
-  },
-  "main": "index.js",
-  "license": "MIT"
+  }
 }
