--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vite-plugin-pwa": "^0.12.0"
   }
 }
