:hourglass: added offline detection

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "framer-motion": "^4",
     "moment": "^2.29.3",
     "react": "^17.0.2",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
     "@types/react": "^17.0.33",
+    "@types/react-detect-offline": "^2.4.1",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.4.1",
