--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sooluh/confess",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,7 +11,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@supabase/supabase-js": "^1.28.5",
@@ -33,8 +32,18 @@
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
+    "sass": "^1.53.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vite-plugin-pwa": "^0.12.0"
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "endOfLine": "lf",
+    "semi": false,
+    "tabWidth": 2,
+    "trailingComma": "none"
   }
 }
