--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@sooluh/confess",
-  "private": true,
-  "version": "0.0.2",
+  "name": "@sooluh/secret",
+  "version": "0.0.3",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -15,6 +14,7 @@
     "@emotion/styled": "^11",
     "@supabase/supabase-js": "^1.28.5",
     "framer-motion": "^4",
+    "html-react-parser": "^3.0.8",
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-detect-offline": "^2.4.5",
